# RSWS_V1

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.prebuilt  ENCODING_REPORT.md  FRONTEND_REBUILD.md  OSS测试指南.md  PROJECT_STRUCTURE.md  README.md  VERSION.json  _custom_order.ps1  _find_salvo.py  _find_salvo2.py  _search_salvo.py  add_supported_os.sql  backup_20260531_2232.sql.backup  backup_20260531_2235.sql.backup  build.log.backup  build_error.log.backup  config.toml  database.sql  docker-compose.dev.yml  docker-compose.yml  fix-encoding.ps1  init_admin.sql  insert_test_logs.py  nginx.conf  package.json  schema.sql  server.pid  task-summary_2026-06-08_log-system.md  test_all_routes.ps1  test_api_routes.ps1  test_chain.rs  test_routes.ps1  骨架.md
.github/workflows/: ci.yml  release.yml
docs/: api-integration-spec.md
frontend/admin/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/admin/src/: App.vue  env.d.ts  main.ts  style.css
frontend/admin/src/api/: admin.ts  category.ts  dashboard.ts  email.ts  log.ts  order.ts  oss-config.ts  payment.ts  request.ts  resource.ts  user.ts
frontend/admin/src/components/: ModernLayout.vue
frontend/admin/src/router/: index.ts
frontend/admin/src/types/: admin.ts  api.ts  dashboard.ts  index.ts  log.ts  order.ts  (+3 more)
frontend/user/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/user/src/: env.d.ts  main.ts  style.css  theme.css
migrations/: 001_initial_schema.sql  002_log_tables.sql  20260506185039_initial_schema.sql  20260509055216_add_download_count.sql  20260509190000_create_categories.sql  20260519000000_remove_api_key_tables.sql  20260521042500_add_category_hierarchy.sql  20260521103000_add_nickname_to_users.sql  20260525000000_initial_schema.sql  20260529000000_add_payment_methods.sql  20260530000000_remove_bigserial_defaults.sql  20260530000001_add_usdt_wallets_unique_constraint.sql  20260608000000_initial_schema.sql  20260608000001_add_log_level.sql  20260608000002_add_log_tables.sql  20260611000000_usdt_wallets.sql
rsws_api/: Cargo.toml
rsws_api/src/: admin_handler.rs  config_handler.rs  lib.rs  order.rs  resource.rs  router.rs  state.rs  user_handler.rs
rsws_api/src/admin/: payment_config_handler.rs
rsws_api/src/handler/: admin.rs  admin_oss.rs  admin_paypal.rs  category.rs  mod.rs  order.rs  payment.rs  resource.rs  upload.rs  user.rs
rsws_api/src/handler/admin/: api_key.rs  audit_log.rs  auth.rs  category.rs  dashboard.rs  email.rs  error_log.rs  log.rs  login_log.rs  management.rs  mod.rs  order.rs  oss.rs  payment_method.rs  paypal.rs  resource.rs  user.rs  wallet.rs
rsws_api/src/handler/common/: mod.rs  payment.rs  upload.rs  webhook.rs
rsws_api/src/handler/custom/: category.rs  mod.rs  order.rs  resource.rs  user.rs
rsws_api/src/middleware/: auth.rs  mod.rs  request_id.rs  signature_auth.rs  tracing.rs  unified_auth.rs
rsws_api/src/user/: avatar.rs  email.rs  mod.rs  password.rs  profile.rs  security.rs
rsws_api/src/webhook/: blockchain.rs  paypal.rs
rsws_bin/: Cargo.toml
rsws_bin/src/: main.rs
rsws_bin/tests/: api_integration.rs
rsws_common/: Cargo.toml
rsws_common/src/: auth_handler.rs  config.rs  email.rs  encryption.rs  error.rs  error_code.rs  lib.rs  password.rs  response.rs  response_ext.rs  signature.rs  snowflake.rs  utils.rs
rsws_common/src/utils/: mod.rs
rsws_db/: Cargo.toml
rsws_db/migrations/: 20260521140000_add_owner_type_to_resources.sql  20260521150000_create_admin_operation_logs.sql  20260521160000_create_email_configs.sql  20260521170000_create_menu_items.sql  20260521223000_add_supported_os_to_resources.sql  20260531000000_drop_categories_slug.sql  20260531000001_convert_bigserial_to_bigint.sql
rsws_db/src/: admin.rs  api_key.rs  category.rs  lib.rs  order.rs  payment.rs  redis.rs  resource.rs  user.rs  user_api_key.rs  wallet.rs
rsws_db/src/postgres/: mod.rs
rsws_db/src/redis/: api_key.rs
rsws_model/: Cargo.toml
rsws_model/src/: api_key.rs  auth.rs  config.rs  lib.rs  payment.rs  request.rs  resource.rs  response.rs  user.rs
rsws_model/src/log/: error_log.rs  mod.rs  operation_log.rs  payment_log.rs  request_log.rs  system_log.rs  webhook_log.rs
rsws_model/src/payment/: mod.rs  order.rs  payment_config.rs  transaction.rs
rsws_model/src/resource/: resource.rs
rsws_model/src/user/: admin.rs  avatar.rs  email.rs  mod.rs  password.rs  profile.rs  role.rs  user.rs
rsws_model/src/user_models/: admin.rs  avatar.rs  email.rs  mod.rs  password.rs  profile.rs  role.rs  user.rs
rsws_service/: Cargo.toml
rsws_service/src/: admin_service.rs  api_key_manager.rs  api_key_service.rs  audit_log_service.rs  auth_service.rs  blockchain_service.rs  commission_service.rs  config_service.rs  cross_platform_service.rs  email_verification_service.rs  error_log_service.rs  lib.rs  log_service.rs  login_log_service.rs  order_service.rs  oss_service.rs  payment_service.rs  paypal_service.rs  request_service.rs  resource_service.rs  user_payment_service.rs  user_service.rs  webhook_service.rs
rsws_usdt/: Cargo.toml
rsws_usdt/src/: config.rs  ethereum.rs  lib.rs  listener.rs  matcher.rs  processor.rs  tron.rs
scripts/: fix_admin_pwd.sql  fix_serial_types.py  gen_fix_pwd.py  gen_full_test_data.py  gen_test_data.py  test_data.sql  test_data_fixed.sql  test_data_full.sql  test_data_v4.sql  update_test_data.py
sql/: missing_tables.sql  unified_schema.sql
ui/admin/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/admin/src/: App.tsx  App.vue  env.d.ts  main.ts  style.css
ui/common/: README.md  package.json
ui/common/components/: README.md
ui/common/constants/: README.md
ui/common/hooks/: README.md
ui/common/src/: index.ts
ui/common/types/: README.md
ui/common/utils/: README.md
ui/user/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/user/src/: App.tsx  env.d.ts  main.ts  setupTests.ts  style.css
(+146 files in other folders)
