[workspace]
members = [
    "rsws_api",
    "rsws_service", 
    "rsws_model",
    "rsws_db",
    "rsws_common",
    "rsws_bin"
]
resolver = "2"

[workspace.dependencies]
# 核心框架
tokio = { version = "1.36.0", features = ["full"] }
salvo = { git = "https://github.com/salvo-rs/salvo"}

# 数据库和缓存
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal", "json", "migrate"] }
redis = "0.32.4"
deadpool-redis = "0.22.0"

# 序列化
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# 时间和数值
chrono = { version = "0.4.34", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }

# ID生成
rust-snowflake = "0.1.3"

# 错误处理和日志
thiserror = "2.0.12"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# 配置和工具
config = "0.15.13"
lettre = { version = "0.11.5", features = ["tokio1-rustls-tls", "builder"] }
argon2 = "0.5.2"
rand = "0.9.2"