[workspace]
members = [
    "rsws_api",
    "rsws_service", 
    "rsws_model",
    "rsws_db",
    "rsws_common",
    "rsws_bin"
]
resolver = "2"

[workspace.dependencies]
# Web 框架 (禁用默认特性以避免 OpenSSL)
salvo = { git = "https://github.com/salvo-rs/salvo", features = ["oapi", "cors", "compression", "serve-static", "rustls"], default-features = false }

# 异步运行时
tokio = { version = "1.42.0", features = ["full"] }

# HTTP 客户端 (使用 rustls-tls 替代 default-features)
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# 数据库 (使用 rustls-tls 替代 default-features)
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal", "migrate"], default-features = false }

# Redis
redis = { version = "0.32.4", features = ["tokio-comp"], default-features = false }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"], default-features = false }

# 配置管理
config = "0.15.13"

# 错误处理
thiserror = "2.0.12"
anyhow = "1.0.95"

# 时间处理
chrono = { version = "0.4.39", features = ["serde"] }

# 数值处理
rust_decimal = { version = "1.37.0", features = ["serde"] }

# 邮件 (使用 rustls-tls)
lettre = { version = "0.11.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# ID 生成
rust-snowflake = "0.1.3"

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# 工具库
rand = "0.9.2"
argon2 = "0.5.3"