[package]
name = "rsws_api"
version = "0.1.1"
edition = "2021"

[dependencies]
rsws_common = { path = "../rsws_common" }
rsws_model = { path = "../rsws_model" }
rsws_service = { path = "../rsws_service" }
rsws_db = { path = "../rsws_db" }

salvo = { workspace = true }
salvo-cors = { workspace = true }
salvo-oapi = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
md5 = "0.8.0"
num-traits = "0.2"
