[package]
name = "rsws_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rsws_common = { path = "../rsws_common" }
rsws_model = { path = "../rsws_model" }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
rust_decimal = { workspace = true }

[[bin]]
name = "rsws"
path = "src/main.rs"