[package]
name = "rsws_model"
version = "0.1.1"
edition = "2021"

[dependencies]
rsws_common = { path = "../rsws_common" }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
salvo-oapi = { workspace = true }
