[package]
name = "rsws_service"
version = "0.1.1"
edition = "2021"

[dependencies]
rsws_common = { path = "../rsws_common" }
rsws_model = { path = "../rsws_model" }
rsws_db = { path = "../rsws_db" }

# 异步 trait 支持
async-trait = { workspace = true }

# Bytes 处理
bytes = { workspace = true }

# AWS SDK (S3 兼容)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }

# URL 解析
url = "2.5.4"

sqlx = { workspace = true }
deadpool-redis = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
salvo-oapi = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
md5 = "0.8.0"
base64 = { workspace = true }

[dev-dependencies]
